--- a/productreceived.html
+++ b/productreceived.html
@@ -86,7 +86,7 @@
       }
       
       function fConfirm() {
-        alert("Product sale confirmation sent!");
+        alert("Product receipt confirmation sent!");
         window.location.href = "index.html";
       }
       
